--- a/src/App.css
+++ b/src/App.css
@@ -29,27 +29,29 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  width: 100vw;
- top: 100px;
+  width: 100vw; /* was 90vw */
   backdrop-filter: blur(4px);
   background-color: rgba(0,0,0,0.5);
   gap: 20px;
+  overflow: hidden;
 }
 
 .landing_content {
- margin-top: 430px;
-  margin-left: 100px;
-  transform: translate(-50%, -50%);
+  /* margin-top: 430px; */
+  /* margin-left: 100px; */
+  /* transform: translate(-50%, -50%); */
   z-index: 1;
   text-align: center;
-  /* background-color: red; */
   width: 400px;
+  max-width: 90vw;
   height: 400px;
   display: flex;
   align-items: center;
   flex-direction: column;
   justify-content: center;
   gap: 10px;
+  /* Optional: add some padding if you want vertical offset */
+  /* padding-top: 40px; */
 }
 
 .content p,
